# promptforge

./: Cargo.toml  README.md
benches/: template_bench.rs
scripts/: many_quality.ps1  pre_quality.ps1
src/: braces.rs  chat.rs  chat_prompt_template.rs  chat_template.rs  chat_templates.rs  chats.rs  examples.rs  few_shot_chat_template.rs  few_shot_chat_template_config.rs  few_shot_template.rs  formatting.rs  is_even.rs  lib.rs  message_like.rs  messages_placeholder.rs  placeholder.rs  prompt_template.rs  prompt_vars.rs  role.rs  templatable.rs  template.rs  template_format.rs  vars.rs
tests/: test_chat_template.rs  test_few_shot_chat_template.rs  test_few_shot_template.rs
tests/data/: chat_template.toml  few_shot_chat_template.toml  few_shot_template.toml
