[package]
name = "promptforge"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/kinghuynh/promptforge.git"
authors = ["Kingston Huynh <139024820+kinghuynh@users.noreply.github.com>"]
description = "A Rust crate for building and formatting prompts for AI agents."
keywords = ["llm", "AI", "prompts", "langchain", "agents"]
categories = [
    "development-tools",
    "template-engine",
    "text-processing",
]

[dependencies]
handlebars = "6.1.0"
messageforge = "0.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
