[package]
name = "promptforge"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/ishanwen-byte/promptforge.git"
authors = ["Ishan Wen <ishanwen@byte.org>"]
description = "A Rust crate for building and formatting prompts for AI agents."
keywords = ["llm", "AI", "prompts", "langchain", "agents"]
categories = ["development-tools", "template-engine", "text-processing"]

[dependencies]
futures = "0.3.30"
handlebars = "6.1.0"
lazy_static = "1.5.0"
messageforge = "0.1"
regex = "1.10.6"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
toml = "0.9.4"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "mustache"
path = "benches/template_bench.rs"
harness = false
